# CallFF

./: CMakeLists.txt  README.md
include/: call.hpp  callarg.hpp
src/: CMakeLists.txt  call.cpp  callgen.hpp  callgen_SysV_x86_64.cpp  callgen_Win_arm64.cpp  callgen_Win_x86_64.cpp  callgen_cdecl.cpp  opcodes_x86.hpp  opcodes_x86_64.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  main.cpp
